# legacy_titan_bridge

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cobol/: core_banking.cbl
contracts/: Anchor.sol
scripts/: demo.sh
sidecar/: Cargo.toml
sidecar/src/: blockchain.rs  ffi.rs  main.rs  merkle.rs  policy.rs
